# lr_panda

./: CMakeLists.txt  package.xml
config/: franka_gripper_config.yaml  moveit.rviz  panda_gazebo_control.yaml  ros_controllers.yaml  ros_effort_effort_controllers.yaml  ros_effort_position_controllers.yaml  ros_effort_trajectory_controllers.yaml  ros_position_trajectory_controllers.yaml
launch/: franka_gripper.launch  gym.launch  moveit.launch  panda_effort_control.launch  panda_generic.launch  panda_generic_control.launch  panda_position_control.launch  simple.launch
scripts/: move_to_joint_pose_raw.py  move_to_start_pose_raw.py  move_to_start_pose_raw.sh  moveitPandaTest.py  print_error.py  recoverArm.sh  start_ros_controller.py
urdf/: panda.effort_control.xacro  panda.gazebo.control.xacro  panda.gazebo.xacro  panda.position_control.xacro  panda_arm.urdf.xacro  panda_arm.xacro  panda_arm_generic.urdf.xacro  panda_arm_generic.xacro  panda_arm_no_gripper.urdf.xacro  panda_arm_standard_gripper.urdf.xacro  standard_gripper.urdf.xacro  standard_gripper.xacro
