<?xml version="1.0"?>
<package format="2">
  <name>lr_panda</name>
  <version>0.0.0</version>
  <description>Package describing panda robot with different grippers</description>
  <maintainer email="nicolas.cazin@ec-lyon.fr">Nicolas Cazin</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <depend>franka_ros</depend> Dependency removed as not present in ros repo yet, should be available soon --> 
  <depend>effort_controllers</depend>
  <depend>position_controllers</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>joint_state_controller</depend>

</package>
