<?xml version="1.0"?>
<package format="2">
  <name>lr_panda</name>
  <version>0.0.0</version>
  <description>Package describing panda robot with different grippers</description>
  <maintainer email="nicolas.cazin@ec-lyon.fr">Nicolas Cazin</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- franka_ros dependency temporarily removed as not present in ros repo yet, should be available soon --> 
  <!-- once available re-add it and remove other franka dependencies -->-->
  <!-- <depend>franka_ros</depend> -->
  <depend>franka_control</depend>
  <depend>franka_gripper</depend>
  <depend>franka_description</depend>
  <depend>franka_hw</depend>
  <depend>franka_msgs</depend>
  <depend>franka_visualization</depend>

  <depend>effort_controllers</depend>
  <depend>position_controllers</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>joint_state_controller</depend>

</package>
